fix:fix layout bug with back-to-top

--- a/src/app/comp/Header/Header.scss
+++ b/src/app/comp/Header/Header.scss
@@ -2,7 +2,7 @@
 
 @layer components {
   .header {
-    @apply flex items-center justify-between;
+    @apply flex items-center justify-between relative z-10;
 
     h1 {
       @apply text-[3rem] phone-l:text-[3.5rem] md:text-[3.5rem] lg:text-[4rem] laptop:text-[4.5rem] min-[1200px]:text-[5rem] xl:text-[5.5rem] text-teal-700 dark:text-neutral-200 drop-shadow-logo dark:drop-shadow-logo_dark;
